Adicionando a configuracao do jaeger para monitoria do tracing e trocando o client para webClient porque o Feign client existe um bug com o jaeger

--- a/investment/src/main/resources/application.yml
+++ b/investment/src/main/resources/application.yml
@@ -26,8 +26,10 @@ spring:
   h2:
     console:
       enabled: true
-
-
+  cloud:
+    loadbalancer:
+      ribbon:
+        enable: true
 
 lab:
   investment:
